<resources>
    <string name="app_name">TimeTracking</string>
    <string name="menu_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">TrackerList</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="newtracker_name">Name</string>
    <string name="newtracker_add">Add</string>
    <string name="newtracker_target">Target (in hours)</string>
    <string name="newtracker_initialvalue">Initial value (in hours)</string>
    <string name="newtracker_label">New TimeTracker</string>
    <string name="notification_content_plural">TimeTrackers are active</string>
    <string name="notification_content_singular">TimeTracker is active</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
</resources>